feat: 漏洞与风险关联包展示

--- a/app/renderer/src/main/public/locales/en/risk.json
+++ b/app/renderer/src/main/public/locales/en/risk.json
@@ -72,7 +72,10 @@
     "not_verified": "Not Verified",
     "vulnerability_description": "Vulnerability Description",
     "solution": "Solution",
-    "details": "Details"
+    "details": "Details",
+    "next": "Next",
+    "prev": "Prev",
+    "originReq": "Raw request"
   },
   "YakitRiskDetailContent": {
     "related_code_snippet": "Related Code Snippet"
